[package]
name = "atun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun = { version = "0.6.1", features = ["async"] }
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"]}
byteorder = { version = "1"}
bytes = { version = "1"}
libc = "0.2"
log = "0.4"
thiserror = "1"
packet = "0.1"
futures = "0.3"
futures-core = { version = "0.3" }
